force-app/main/default/objects/Product_Trans_Risk__c/Product_Trans_Risk__c.object-meta.xml
<CustomObject>
    <label>Product Trans Risk</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Trans Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Transaction Risk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>