force-app/main/default/objects/Product_Trans_Risk__c/fields/EDC_FEE_MTD__c.field-meta.xml
<CustomField>
    <fullName>EDC_FEE_MTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EDC_FEE(MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>