force-app/main/default/objects/Product_Trans_Risk__c/fields/FX_VOL_MTD__c.field-meta.xml
<CustomField>
    <fullName>FX_VOL_MTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FX_VOL (MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>