force-app/main/default/objects/Product_Trans_Risk__c/fields/FX_VOL_YTD__c.field-meta.xml
<CustomField>
    <fullName>FX_VOL_YTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FX_VOL (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>