force-app/main/default/objects/Product_Trans_Risk__c/fields/NIMC_MTD__c.field-meta.xml
<CustomField>
    <fullName>NIMC_MTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NIMC (MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>