force-app/main/default/objects/Product_Trans_Risk__c/fields/OTHER_CM_FEE_MTD__c.field-meta.xml
<CustomField>
    <fullName>OTHER_CM_FEE_MTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OTHER_CM_FEE(MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>