force-app/main/default/objects/Product_Trans_Risk__c/fields/OTHER_FEE_YTD__c.field-meta.xml
<CustomField>
    <fullName>OTHER_FEE_YTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OTHER_FEE(YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>